--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "chart.js": "^3.7.1",
     "eslint": "7.2.0",
     "moment": "^2.29.1",
     "pusher-js": "^7.0.3",
@@ -28,6 +29,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
